# CMGMP

./: .gitignore  .gitmodules  CMakeLists.txt  Notes.md  README.md  TODO.md
cmgmp/: CMakeLists.txt
cmgmp/contacts/: contact_constraints.cpp  contact_constraints.h  contact_kinematics.cpp  contact_kinematics.h  contact_mode_enumeration.cpp  contact_mode_enumeration.h  contact_utils.cpp  contact_utils.h
cmgmp/dart_utils/: dart_utils.cpp  dart_utils.h
cmgmp/manipulators/: DartDDHand.cpp  DartDDHand.h  DartDDHandFreeY.cpp  DartDDHandFreeY.h  DartKR5.cpp  DartKR5.h  DartManipulatorTemplate.h  DartParallelJawGripper.cpp  DartParallelJawGripper.h  DartPointManipulator.cpp  DartPointManipulator.h  DartURDFManipulatorTemplate.h  ManipulatorTemplate.h
cmgmp/manipulators/ddhand/: handik.h  two_link_kinematics.cpp  two_link_kinematics.h
cmgmp/search/: planner_option.h  rrtplanner.cpp  rrtplanner.h  tree.cpp  tree.h
cmgmp/search_hierarchical/: hierarchical_planner.cpp  hierarchical_planner.h  hierarchical_tree.cpp  hierarchical_tree.h  todo.md
cmgmp/utilities/: eiquadprog.hpp  sample.cpp  sample.h  sample_grasp.cpp  sample_grasp.h  utilities.cpp  utilities.h
cmgmp/worlds/: DartWorld.cpp  DartWorld.h  PlanningWorld.cpp  PlanningWorld.h  WorldTemplate.h
data/grasp_sampling/: BIG_SCREW.csv  BIG_SCREW_dense.csv  BIG_SCREW_grasps.csv  ball_compound_r_1.csv  ball_radius_1.csv  bookshelf_surface_points.csv  box_halflength_1.csv  box_halflength_1_ddhand.csv  box_halflength_1_grasps.csv  box_lx_1_ly_4_lz_4.csv  box_lx_1_ly_4_lz_4_ddhand.csv  box_lx_2_ly_4_lz_2.csv  cylindar_l_2_r_1.csv  peg_out_of_hole_surface_points.csv  russian_block_l_2.csv  russian_block_l_2_grasps.csv  small_bumper_scale_200.csv  socket_screw.csv  tetrahedron_1.csv  torus_tri.csv
data/meshes/stl/: ball_compound_r_1.stl  ball_radius_1.stl  box_halflength_1.stl  box_lx_1_ly_4_lz_4.stl  box_lx_2_ly_4_lz_2.stl  box_lx_2_ly_4_lz_4.stl  cylindar_l_2_r_1.stl  russian_block_l_2.stl  screw.stl  tetrahedron_1.stl
data/meshes/stl_scale_50/: BIG_SCREW.stl  ball_compound_r_1.stl  ball_radius_1.stl  box_halflength_1.stl  box_lx_1_ly_4_lz_4.stl  box_lx_2_ly_4_lz_2.stl  box_lx_2_ly_4_lz_4.stl  cylindar_l_2_r_1.stl  russian_block_l_2.stl  small_bumper_scale_200.stl  small_bumper_scale_2000.stl  small_bumper_scale_5000.stl  socket_screw.stl  tetrahedron_1.stl  torus_tri.stl
data/robot_workspace/: KR5_workspace.csv  KR5_workspace_convhull.csv
examples/: CMakeLists.txt  KR5.cpp  bookshelf.cpp  ddhand_bookshelf.cpp  ddhand_flip.cpp  ddhand_slideup.cpp  flip_cube.cpp  peg_out_hole.cpp  pick_card.cpp  push_along_walls.cpp
tests/: CMakeLists.txt  test_KR5.cpp  test_contact_mode.cpp  test_dartworld.cpp  test_ddhand.cpp  test_utils.cpp
